@@ -39,6 +39,7 @@ Patches
  - Aubrey Holland
  - Konstantin Käfer
  - Mak Kolybabi
+ - Stella Laurenzo
  - Dennis Luxen
  - Tom MacWright
  - Michal Migurski
